--- a/src/.env.example
+++ b/src/.env.example
@@ -1,2 +1,7 @@
 APP_NAME="RAG-project"
 APP_VERSION="0.1"
+OPENAI_KEY="abb"
+
+FILE_ALLOWED_TYPES= ["text/plain", "application/pdf" ]
+FILE_ALLOWED_SIZE=10
+FILE_DEFAULT_CHUNK_SIZE = 512000 # 512KB
